# alphatree

./: CMakeLists.txt  Makefile  README.md  alphatree.sln  alphatree.vcxproj  alphatree.vcxproj.filters  test.cpp  todo.txt
demo/: base_demo.py  discrimination_correlation.py  distinct_correlation.py  open_corr_filter.py  open_feature_selector.py  open_filter.py  open_inc_filter.py
demo/conf/: communications.ini  little_market.ini
doc/: alpha.txt  subalpha.txt
libalphatree/: Makefile  alphabi.h  alphaexaminer.h  alphaexaminer.h!  alphafilter.h!  alphaforest.h  alphagbdt.h  alphagraph.h  alphatransaction.h  libalphatree_api.cpp
libalphatree/alpha/: alpha.h  alphaatom.h  alphabacktrace.h  alphadb.h  alphapic.h  alphaprocess.h  alphatree.h  base.h  basealphatree.h  converter.h  normal.h  process.h  unit.h
libalphatree/base/: bag.h  cache.h  darray.h  dcache.h  dtree.h  hashmap.h  hashname.h  histogram.h  iterator.h  matrix.h  normal.h  pareto.h  randomchoose.h  threadpool.h  vector.h
libalphatree/bi/: basebi.h  bigroup.h
libalphatree/cart/: act.h  bar.h  gbdt.h  gbdtbase.h  loss.h  split.h
libalphatree/db/: featureiterator.h  signiterator.h  stockcache.h  stockdes.h  stockfeature.h  stocksign.h
libalphatree/filter/: alphagroup.h  alphawork.h  alphawork.h!  basefiltertree.h  collectwork.h  collectwork.h!  filter.h!  filterforest.h  filterhistogram.h  filtertree.h  flagwork.h  flagwork.h!  vgwork.h  vgwork.h!
libalphatree/hmm/: gaussianhmm.h  hmmbase.h
libalphatree/test/: alphabacktrace.h  (+7 more)
proto/: export.sh  stock.proto
pyalphatree/: Makefile  requirements.txt  setup.py  test.py  test_old.py
strategy/: base.txt  feature.txt
(+50 files in other folders)
